force-app/main/default/objects/Supplier_Product_Capacity__c/Supplier_Product_Capacity__c.object-meta.xml
<CustomObject>
    <label>Supplier Product Capacity</label>
    <nameField>
        <label>Supplier Product Capacity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier_Product_Capacities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>