force-app/main/default/objects/Supplier_Product_Capacity__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Supplier Product Capacity</relationshipLabel>
    <relationshipName>Supplier_Product_Capacity</relationshipName>
    <type>Lookup</type>
</CustomField>